compiler/testData/diagnostics/tests/generics/ClassObjectBoundsAreNotSupported.kt
class C<T> where <!UNSUPPORTED!>class object T: Any<!>
fun f<T>() where <!UNSUPPORTED!>class object T: Any<!> {}